--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -11,6 +11,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="5dp"
+            android:text="@string/twoHundredEuro"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@+id/editText200euro"
+            app:layout_constraintStart_toEndOf="@+id/editText50cent"
+            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+        <EditText
+            android:id="@+id/editText200euro"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="17dp"
+            android:background="#979797"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:text="@string/quantity"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView13"
+            app:layout_constraintTop_toBottomOf="@+id/editText100euro" />
+
         <Button
             android:id="@+id/buttonCalculate"
             android:layout_width="200dp"
@@ -50,7 +81,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/editText50euro2"
+            android:id="@+id/editText100euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_marginStart="1dp"
@@ -58,7 +89,7 @@
             android:layout_marginEnd="17dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -72,9 +103,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:layout_marginTop="40dp"
+            android:layout_marginEnd="120dp"
             android:text="@string/hundredEuro"
             android:textColor="@color/white"
             android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/editText50cent"
             app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -87,7 +120,7 @@
             android:layout_marginEnd="15dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -116,7 +149,7 @@
             android:layout_marginEnd="15dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -133,7 +166,7 @@
             android:layout_marginEnd="15dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -174,7 +207,7 @@
             android:layout_marginEnd="15dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -203,7 +236,7 @@
             android:layout_marginEnd="15dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -232,7 +265,7 @@
             android:layout_marginEnd="15dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -260,7 +293,7 @@
             android:layout_marginTop="11dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -287,7 +320,7 @@
             android:layout_marginTop="11dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -314,7 +347,7 @@
             android:layout_marginTop="11dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -341,7 +374,7 @@
             android:layout_marginTop="11dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -368,7 +401,7 @@
             android:layout_marginTop="10dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -395,7 +428,7 @@
             android:layout_marginTop="17dp"
             android:background="#979797"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="@color/black"
