Završeno sve što je planirano

--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="35dp"
             android:layout_marginEnd="5dp"
             android:text="@string/twoHundredEuro"
             android:textColor="@color/white"
@@ -29,20 +29,18 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginBottom="150dp"
             android:text="@string/EURO"
             android:textColor="@color/white"
             android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView14"
-            app:layout_constraintTop_toBottomOf="@+id/editText200euro" />
+            app:layout_constraintStart_toEndOf="@+id/textView14" />
 
         <EditText
             android:id="@+id/editText200euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="1dp"
             android:layout_marginTop="11dp"
             android:layout_marginEnd="17dp"
             android:background="#979797"
@@ -97,7 +95,6 @@
             android:id="@+id/editText100euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="1dp"
             android:layout_marginTop="11dp"
             android:layout_marginEnd="17dp"
             android:background="#979797"
@@ -115,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="120dp"
             android:text="@string/hundredEuro"
             android:textColor="@color/white"
@@ -128,9 +125,8 @@
             android:id="@+id/editText50euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="17dp"
             android:background="#979797"
             android:ems="10"
             android:inputType="numberDecimal"
@@ -138,6 +134,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.65"
             app:layout_constraintStart_toEndOf="@+id/textView12"
             app:layout_constraintTop_toBottomOf="@+id/editText20euro" />
 
@@ -146,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="37dp"
             android:text="@string/fiftyEuro"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -157,9 +154,8 @@
             android:id="@+id/editText20euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="17dp"
             android:background="#979797"
             android:ems="10"
             android:inputType="numberDecimal"
@@ -167,6 +163,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.58"
             app:layout_constraintStart_toEndOf="@+id/textView11"
             app:layout_constraintTop_toBottomOf="@+id/editText10euro" />
 
@@ -174,9 +171,8 @@
             android:id="@+id/editText10euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="17dp"
             android:background="#979797"
             android:ems="10"
             android:inputType="numberDecimal"
@@ -184,6 +180,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.58"
             app:layout_constraintStart_toEndOf="@+id/textView10"
             app:layout_constraintTop_toBottomOf="@+id/editText5euro" />
 
@@ -215,9 +212,8 @@
             android:id="@+id/editText5euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="17dp"
             android:background="#979797"
             android:ems="10"
             android:inputType="numberDecimal"
@@ -225,6 +221,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.72"
             app:layout_constraintStart_toEndOf="@+id/textView9"
             app:layout_constraintTop_toBottomOf="@+id/editText2euro" />
 
@@ -244,9 +241,8 @@
             android:id="@+id/editText2euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="17dp"
             android:background="#979797"
             android:ems="10"
             android:inputType="numberDecimal"
@@ -254,6 +250,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.71"
             app:layout_constraintStart_toEndOf="@+id/textView8"
             app:layout_constraintTop_toBottomOf="@+id/editText1euro" />
 
@@ -273,9 +270,8 @@
             android:id="@+id/editText1euro"
             android:layout_width="80dp"
             android:layout_height="50dp"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="17dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="17dp"
             android:background="#979797"
             android:ems="10"
             android:inputType="numberDecimal"
@@ -283,6 +279,7 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toEndOf="@+id/textView7"
             app:layout_constraintTop_toTopOf="parent" />
 
