--- a/app/src/main/res/layout/fragment_new_input.xml
+++ b/app/src/main/res/layout/fragment_new_input.xml
@@ -12,7 +12,7 @@
         android:background="#272F5E">
 
         <Button
-            android:id="@+id/buttonBack"
+            android:id="@+id/buttonGetBack"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
@@ -23,7 +23,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonInput" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonChange" />
 
         <RadioGroup
             android:id="@+id/radioGroupGuilty"
@@ -52,7 +52,7 @@
         </RadioGroup>
 
         <Button
-            android:id="@+id/buttonInput"
+            android:id="@+id/buttonChange"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginTop="60dp"
@@ -72,7 +72,7 @@
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonInput"
+            app:layout_constraintTop_toBottomOf="@+id/buttonChange"
             app:srcCompat="@drawable/carinski_grb_2020_siva" />
 
         <com.google.android.material.textfield.TextInputLayout
